@@ -24,7 +24,7 @@
 
 defined('MOODLE_INTERNAL') || die();
 
-$plugin->version   = 2017072800;        // The current plugin version (Date: YYYYMMDDXX).
+$plugin->version   = 2017072801;        // The current plugin version (Date: YYYYMMDDXX).
 $plugin->requires  = 2014051200;        // Requires this Moodle version.
 $plugin->component = 'atto_cloze';  // Full name of the plugin (used for diagnostics).
 $plugin->maturity = MATURITY_STABLE;
